more demo goodness

--- a/css/example.css
+++ b/css/example.css
@@ -7,6 +7,7 @@ body {
     background: -ms-radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
     background: radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
     background-color: #f7fbfc;
+    font-family: sans-serif;
 }
 
 pre {
